--- a/EEG-BCI/graduate/graph/stable/stacking-accuracy-and-variance-and-float-2.ipynb
+++ b/EEG-BCI/graduate/graph/stable/stacking-accuracy-and-variance-and-float-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.set_printoptions(suppress=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -142,6 +151,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00039794 0.00028187 0.00046632 0.00048626] [0.00032968 0.0003289  0.00020606 0.00010696]\n",
+      "[ 0.00006826 -0.00004703  0.00026026  0.0003793 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(base_variance_mean , np.squeeze(sbp_s))\n",
+    "print(base_variance_mean - np.squeeze(sbp_s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00034413 0.00032387 0.0003355  0.0002853 ] [0.00032968 0.0003289  0.00020606 0.00010696]\n",
+      "[ 0.00001446 -0.00000504  0.00012944  0.00017834]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bagging_variance_mean , np.squeeze(sbp_s))\n",
+    "print(bagging_variance_mean - np.squeeze(sbp_s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6250963897651595"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.00017834 / 0.0002853 "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -253,6 +320,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0001305  0.0001127  0.00009263 0.00016984] [0.00000149 0.00000093 0.00000022 0.00000008]\n",
+      "[0.00012901 0.00011177 0.00009241 0.00016976]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(base_variance_mean , np.squeeze(rms_s))\n",
+    "print(base_variance_mean- np.squeeze(rms_s)  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00011934 0.00009541 0.00004257 0.00007682] [0.00000149 0.00000093 0.00000022 0.00000008]\n",
+      "[0.00011785 0.00009448 0.00004235 0.00007673]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bagging_variance_mean , np.squeeze(rms_s))\n",
+    "print(bagging_variance_mean - np.squeeze(rms_s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -261,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -364,6 +476,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0002368  0.0001662  0.00019385 0.00021128] [0.0000486  0.00003516 0.00003089 0.00003699]\n",
+      "[0.00018821 0.00013104 0.00016297 0.0001743 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(base_variance_mean , np.squeeze(ar_s))\n",
+    "print(base_variance_mean- np.squeeze(ar_s)  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00022442 0.00016838 0.00015229 0.00018971] [0.00000149 0.00000093 0.00000022 0.00000008]\n",
+      "[0.00022293 0.00016745 0.00015207 0.00018963]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bagging_variance_mean , np.squeeze(rms_s))\n",
+    "print(bagging_variance_mean - np.squeeze(rms_s))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -372,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -475,6 +625,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0001339  0.00009169 0.00017039 0.0001094 ] [0.00008307 0.00005979 0.000062   0.00003043]\n",
+      "[0.00005083 0.0000319  0.00010839 0.00007897]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(base_variance_mean , np.squeeze(fc_ae_s))\n",
+    "print(base_variance_mean- np.squeeze(fc_ae_s)  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00021607 0.00060662 0.00018041 0.00025245] [0.00008307 0.00005979 0.000062   0.00003043]\n",
+      "[0.000133   0.00054683 0.0001184  0.00022202]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bagging_variance_mean , np.squeeze(fc_ae_s))\n",
+    "print(bagging_variance_mean - np.squeeze(fc_ae_s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9014374732122251"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.00054683 /0.00060662 "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -483,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -584,6 +792,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0001342  0.00011948 0.00013378 0.00013666] [0.00012793 0.00001031 0.00003262 0.00001101]\n",
+      "[0.00000627 0.00010917 0.00010116 0.00012565]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(base_variance_mean , np.squeeze(cnn_ae_s))\n",
+    "print(base_variance_mean- np.squeeze(cnn_ae_s)  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00017032 0.00017369 0.0001914  0.00016789] [0.00012793 0.00001031 0.00003262 0.00001101]\n",
+      "[0.0000424  0.00016338 0.00015878 0.00015688]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bagging_variance_mean , np.squeeze(cnn_ae_s))\n",
+    "print(bagging_variance_mean - np.squeeze(cnn_ae_s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04672131147540983"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.00000627/0.0001342  "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -592,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -687,6 +953,64 @@
     "plt.grid() #去掉网格线\n",
     "plt.show()\n",
     "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00017515 0.00018228 0.0000516  0.00009745] [0.00005147 0.00001869 0.00001715 0.00001089]\n",
+      "[0.00012368 0.00016358 0.00003445 0.00008656]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(base_variance_mean , np.squeeze(rnn_ae_s))\n",
+    "print(base_variance_mean- np.squeeze(rnn_ae_s)  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00011807 0.00014474 0.0001018  0.00008189] [0.00005147 0.00001869 0.00001715 0.00001089]\n",
+      "[0.0000666  0.00012605 0.00008466 0.000071  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bagging_variance_mean , np.squeeze(rnn_ae_s))\n",
+    "print(bagging_variance_mean - np.squeeze(rnn_ae_s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6676356589147286"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.00003445 /0.0000516  "
    ]
   },
   {
