--- a/EEG-BCI/graduate/incremental/incremental_SBP.ipynb
+++ b/EEG-BCI/graduate/incremental/incremental_SBP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,6 +704,22 @@
     "    \n",
     "    print('aver time : ' , list(map(np.mean , times.T )) )\n",
     "    print('aver accu : ' , list(map(np.mean , accus.T )) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freq6 =[5.20409835579017, 5.20511447793054, 5.199143427600754, 5.210600509716137, 5.21407711382693, 5.211212516475014, 5.217356973655095, 5.2070190876586, 5.220520056997457]\n",
+    "freq75=[5.205015728671818, 5.210961700084267, 5.209493364216601, 5.2083731988183555, 5.217012251542441, 5.218230989703637, 5.216413322642735, 5.219132799169618, 5.2151740856497355]\n",
+    "freq85=[5.212726407931231, 5.211131875336065, 5.210701190038053, 5.2241638969659325, 5.227821330072809, 5.221911023657019, 5.205884287478199, 5.2111333993327, 5.216366649074162]\n",
+    "freq10=[5.215847156905188, 5.216494555189991, 5.20444314519692, 5.21266974414398, 5.215771040115603, 5.219356288977842, 5.210736979019501, 5.205373976900911, 5.219632440994623]\n",
+    "\n",
+    "cnn = np.array([freq6 , freq75 , freq85 , freq10])\n",
+    "\n",
+    "cnn = np.mean(cnn)"
    ]
   },
   {
